# fastapi-tutorial

./: .cz.json  CHANGELOG.md  Makefile  dbchangelog.sql  pyproject.toml
.devcontainer/: devcontainer.json
.trustacks/: .build.ini
.trustacks/kustomize/base/: database-changelog.yaml  database-password.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  registry-secret.yaml  service.yaml
app/: main.py
app/database/: crud.py  database.py
liquibase/: db.changelog.yaml
tests/database/: crud_test.py
