[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
authors = ["Jared Patrick <jpatrick@trustacks.io>"]
description = ""
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.85.0"
pytest = "7.1.3"
uvicorn = "0.18.3"
SQLAlchemy = "1.4.41"
pydantic = "1.10.2"
coverage = "6.4.4"
mock-alchemy = "0.2.5"
flake8 = "5.0.4"
psycopg2-binary = "2.9.3"
anyio = "3.6.1"
attrs = "22.1.0"
click = "8.1.3"
greenlet = "1.1.3"
h11 = "0.13.0"
idna = "3.4"
iniconfig = "1.1.1"
mccabe = "0.7.0"
packaging = "21.3"
pluggy = "1.0.0"
py = "1.11.0"
pycodestyle = "2.9.1"
pyflakes = "2.5.0"
pyparsing = "3.0.9"
sniffio = "1.3.0"
starlette = "0.20.4"
tomli = "2.0.1"
typing-extensions = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
